# gitea-slack-notifications

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  compose.yaml  init.sql
src/: gitea_webhooks.rs  main.rs
