[package]
name = "intelli-gitea-notifications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
slack-morphism = { version = "2.1.0", features = ["hyper"] }
