[package]
name = "intelli-gitea-notifications"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitea-notif"
path = "src/main.rs"
test = false
bench = false

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
slack-morphism = { version = "2.1.0", features = ["hyper"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
url = "2.5.0"
