[package]
name = "intelli-gitea-notifications"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitea-notif"
path = "src/main.rs"
test = false
bench = false

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
slack-morphism = { version = "2.1.0", features = ["hyper"] }
strum = { version = "0.26.2", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json"] }
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0.86"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-appender = "0.2.3"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
